// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/post_edit_history/edited_post_item should match snapshot 1`] = `
<div>
  <div
    class="edit-post-history__container"
  >
    <div
      aria-label="At 12:00 AM Thursday, January 1, Someone wrote, post message"
      class="a11y__section post"
      id="searchResult_post_id"
    >
      <div
        class="edit-post-history__title__container"
      >
        <div
          class="edit-post-history__date__badge__container"
        >
          <button
            aria-label="Toggle to see an old message."
            class="edit-post-history__icon__button toggleCollapseButton"
          >
            <i
              class="icon icon-chevron-right"
            />
          </button>
          <span
            class="edit-post-history__date"
          >
            <time
              datetime="1970-01-01T00:00:00.000"
            >
              January 01, 1970 at 12:00 AM
            </time>
          </span>
        </div>
        <button
          aria-label="Select to restore an old message."
          class="edit-post-history__icon__button restore-icon"
        >
          <i
            class="icon icon-restore"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_edit_history/edited_post_item should match snapshot when isCurrent is true 1`] = `
<div>
  <div
    class="edit-post-history__container edit-post-history__container__background"
  >
    <div
      aria-label="At 12:00 AM Thursday, January 1, Someone wrote, post message"
      class="a11y__section post"
      id="searchResult_post_id"
    >
      <div
        class="edit-post-history__title__container"
      >
        <div
          class="edit-post-history__date__badge__container"
        >
          <button
            aria-label="Toggle to see an old message."
            class="edit-post-history__icon__button toggleCollapseButton"
          >
            <i
              class="icon icon-chevron-down"
            />
          </button>
          <span
            class="edit-post-history__date"
          >
            <time
              datetime="1970-01-01T00:00:00.000"
            >
              January 01, 1970 at 12:00 AM
            </time>
          </span>
          <div
            class="edit-post-history__current__indicator"
          >
            Current Version
          </div>
        </div>
      </div>
      <div
        class="edit-post-history__content_container"
      >
        <div
          class="edit-post-history__header"
        >
          <span
            class="profile-icon"
          >
            <img
              alt="user profile image"
              class="Avatar Avatar-sm avatar-post-preview"
              loading="lazy"
              src="/api/v4/users/user_id/image?_=0"
            />
          </span>
          <div
            class="edit-post-history__header__username"
          >
            <div
              class="user-popover"
            >
              Someone
            </div>
          </div>
        </div>
        <div
          class="post__content"
        >
          <div
            class="search-item-snippet post__body"
          >
            <div
              class="post-message post-message--collapsed"
            >
              <div
                class="post-message__text-container"
                style="max-height: 600px;"
              >
                <div
                  class="post-message__text"
                  dir="auto"
                  id="rhsPostMessageText_post_id"
                >
                  <p>
                    post message
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_edit_history/edited_post_item should match snapshot with file metadata 1`] = `
<div>
  <div
    class="edit-post-history__container"
  >
    <div
      aria-label="At 12:00 AM Thursday, January 1, Someone wrote, post message"
      class="a11y__section post"
      id="searchResult_post_id"
    >
      <div
        class="edit-post-history__title__container"
      >
        <div
          class="edit-post-history__date__badge__container"
        >
          <button
            aria-label="Toggle to see an old message."
            class="edit-post-history__icon__button toggleCollapseButton"
          >
            <i
              class="icon icon-chevron-right"
            />
          </button>
          <span
            class="edit-post-history__date"
          >
            <time
              datetime="1970-01-01T00:00:00.000"
            >
              January 01, 1970 at 12:00 AM
            </time>
          </span>
        </div>
        <button
          aria-label="Select to restore an old message."
          class="edit-post-history__icon__button restore-icon"
        >
          <i
            class="icon icon-restore"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_edit_history/edited_post_item should match snapshot with file metadata with some deleted files 1`] = `
<div>
  <div
    class="edit-post-history__container"
  >
    <div
      aria-label="At 12:00 AM Thursday, January 1, Someone wrote, post message"
      class="a11y__section post"
      id="searchResult_post_id"
    >
      <div
        class="edit-post-history__title__container"
      >
        <div
          class="edit-post-history__date__badge__container"
        >
          <button
            aria-label="Toggle to see an old message."
            class="edit-post-history__icon__button toggleCollapseButton"
          >
            <i
              class="icon icon-chevron-right"
            />
          </button>
          <span
            class="edit-post-history__date"
          >
            <time
              datetime="1970-01-01T00:00:00.000"
            >
              January 01, 1970 at 12:00 AM
            </time>
          </span>
        </div>
        <button
          aria-label="Select to restore an old message."
          class="edit-post-history__icon__button restore-icon"
        >
          <i
            class="icon icon-restore"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
